--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,6 @@
   text-rendering: optimizeLegibility;
   width: 100%;
   font-family: 'Inter', Arial, sans-serif;
-  color: #fff;
-  background-color: #000;
+  color: #000;
+  background-color: #fff;
 }
