--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -2,7 +2,7 @@
   background-color: #dddee3;
 }
 
-.promo_wrapper {
+.promo__wrapper {
   max-width: 1280px;
   margin: 0 auto;
   padding-top: 184px;
@@ -32,7 +32,7 @@
     line-height: calc(39px + (58 - 39) * (100vw - 320px) / (768 - 320));
   }
 
-  .promo_wrapper {
+  .promo__wrapper {
     padding-top: calc(207px + (224 - 207) * (100vw - 320px) / (768 - 320));
     padding-bottom: calc(240px + (240 - 246) * (100vw - 320px) / (768 - 320));
     background-size: calc(248px + (320 - 248) * (100vw - 320px) / (768 - 320));
