компоненты MoviesCardList, MoviesCard
добавил переменные, в некоторых компонентах изменил семантику, добавил общие классы

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -62,11 +62,6 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  transition: opacity 0.2s linear;
-}
-
-.about-me__link:hover {
-  opacity: 0.7;
 }
 
 .about-me__photo {
@@ -78,69 +73,69 @@
 
 @media screen and (max-width: 1280px) {
   .about-me__wrapper {
-    max-width: calc(668px + (1140 - 668) * (100vw - 768px) / (1280 - 768));
-    padding-top: calc(90px + (110 - 90) * (100vw - 768px) / (1280 - 768));
-    padding-bottom: calc(90px + (100 - 90) * (100vw - 768px) / (1280 - 768));
+    max-width: calc(668px + (1140 - 668) * var(--lg));
+    padding-top: calc(90px + (110 - 90) * var(--lg));
+    padding-bottom: calc(90px + (100 - 90) * var(--lg));
   }
 
   .about-me__info {
-    max-width: calc(364px + (600 - 364) * (100vw - 768px) / (1280 - 768));
+    max-width: calc(364px + (600 - 364) * var(--lg));
   }
 
   .about-me__info-name {
-    font-size: calc(40px + (50 - 40) * (100vw - 768px) / (1280 - 768));
-    line-height: calc(40px + (58 - 40) * (100vw - 768px) / (1280 - 768));
+    font-size: calc(40px + (50 - 40) * var(--lg));
+    line-height: calc(40px + (58 - 40) * var(--lg));
   }
 
   .about-me__info-prof {
-    font-size: calc(12px + (18 - 12) * (100vw - 768px) / (1280 - 768));
-    line-height: calc(18px + (20 - 18) * (100vw - 768px) / (1280 - 768));
+    font-size: calc(12px + (18 - 12) * var(--lg));
+    line-height: calc(18px + (20 - 18) * var(--lg));
   }
 
   .about-me__info-bio {
-    font-size: calc(12px + (14 - 12) * (100vw - 768px) / (1280 - 768));
-    line-height: calc(18px + (22 - 18) * (100vw - 768px) / (1280 - 768));
+    font-size: calc(12px + (14 - 12) * var(--lg));
+    line-height: calc(18px + (22 - 18) * var(--lg));
   }
 
   .about-me__photo {
-    width: calc(255px + (270 - 255) * (100vw - 768px) / (1280 - 768));
-    height: calc(307px + (327 - 307) * (100vw - 768px) / (1280 - 768));
+    width: calc(255px + (270 - 255) * var(--lg));
+    height: calc(307px + (327 - 307) * var(--lg));
   }
 }
 
 @media screen and (max-width: 768px) {
   .about-me__wrapper {
-    max-width: calc(292px + (668 - 292) * (100vw - 320px) / (768 - 320));
-    padding: calc(70px + (90 - 70) * (100vw - 320px) / (768 - 320)) 0;
+    max-width: calc(292px + (668 - 292) * var(--md));
+    padding: calc(70px + (90 - 70) * var(--md)) 0;
   }
 
   .about-me__content {
-    margin-top: calc(60px + (66 - 60) * (100vw - 320px) / (768 - 320));
-    max-width: calc(292px + (668 - 292) * (100vw - 320px) / (768 - 320));
+    margin-top: calc(60px + (66 - 60) * var(--md));
+    max-width: calc(292px + (668 - 292) * var(--md));
   }
 
   .about-me__info {
-    max-width: calc(292px + (364 - 292) * (100vw - 320px) / (768 - 320));
+    max-width: calc(292px + (364 - 292) * var(--md));
   }
 
   .about-me__info-name {
-    font-size: calc(30px + (40 - 30) * (100vw - 320px) / (768 - 320));
-    line-height: calc(36px + (40 - 36) * (100vw - 320px) / (768 - 320));
-    margin-bottom: calc(20px + (16 - 20) * (100vw - 320px) / (768 - 320));
+    font-size: calc(30px + (40 - 30) * var(--md));
+    line-height: calc(36px + (40 - 36) * var(--md));
+    margin-bottom: calc(20px + (16 - 20) * var(--md));
   }
 
   .about-me__info-prof {
-    font-size: calc(11px + (12 - 11) * (100vw - 320px) / (768 - 320));
-    line-height: calc(16px + (18 - 16) * (100vw - 320px) / (768 - 320));
+    font-size: calc(11px + (12 - 11) * var(--md));
+    line-height: calc(16px + (18 - 16) * var(--md));
     margin-bottom: 20px;
   }
 
   .about-me__info-bio {
-    margin-bottom: calc(40px + (87 - 40) * (100vw - 320px) / (768 - 320));
+    margin-bottom: calc(40px + (87 - 40) * var(--md));
   }
 
   .about-me__list-item {
-    margin-right: calc(26px + (20 - 26) * (100vw - 320px) / (768 - 320));
+    margin-right: calc(26px + (20 - 26) * var(--md));
   }
 }
 
