--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,7 +1,6 @@
 .filter-checkbox {
   display: grid;
   grid-template-columns: repeat(2, min-content);
-  justify-items: center;
   column-gap: 14px;
 }
 
@@ -23,7 +22,7 @@
 }
 
 .filter-checkbox__visible {
-  display: inline-block;
+  display: block;
   width: 36px;
   height: 20px;
   background-color: #ebebeb;
@@ -34,7 +33,7 @@
 }
 
 .filter-checkbox__visible-circle {
-  display: inline-block;
+  display: block;
   position: absolute;
   width: 8px;
   height: 8px;
