--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -33,21 +33,16 @@
   font-size: 13px;
   font-weight: 500;
   line-height: 16px;
-  transition: opacity 0.2s linear;
   text-decoration: none;
   color: #000;
 }
 
-.nav-tab__link:hover {
-  opacity: 0.7;
-}
-
 @media screen and (max-width: 768px) {
   .nav-tab__list-item {
-    margin-right: calc(24px + (40 - 24) * (100vw - 320px) / (768 - 320));
+    margin-right: calc(24px + (40 - 24) * var(--md));
   }
 
   .nav-tab__link {
-    font-size: calc(11px + (13 - 11) * (100vw - 320px) / (768 - 320));
+    font-size: calc(11px + (13 - 11) * var(--md));
   }
 }
