--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,6 +1,7 @@
-.search-form__wrapper {
+.search-form {
   max-width: 1140px;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 70px 0 47px;
   box-sizing: border-box;
@@ -22,8 +23,11 @@
   font-weight: 500;
   font-size: 28px;
   line-height: 34px;
-  color: #a0a0a0;
   padding: 0;
+}
+
+.search-form__input::placeholder {
+  color: #a0a0a0;
 }
 
 .search-form__input:focus {
@@ -33,8 +37,47 @@
 .search-form__submit {
   border: none;
   border-radius: 48px;
+  width: 34px;
+  height: 34px;
   background-color: #3456f3;
   background-position: center;
   background-repeat: no-repeat;
   background-image: url('../../images/search-form-submit.svg');
+}
+
+@media screen and (max-width: 1280px) {
+  .search-form {
+    max-width: calc(708px + (1140 - 708) * var(--lg));
+    padding-top: calc(80px + (70 - 80) * var(--lg));
+    padding-bottom: calc(60px + (47 - 60) * var(--lg));
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .search-form {
+    max-width: calc(292px + (708 - 292) * var(--md));
+    padding-top: calc(84px + (80 - 84) * var(--md));
+    padding-bottom: calc(50px + (60 - 50) * var(--md));
+    align-items: flex-end;
+    margin-bottom: 29px;
+  }
+
+  .search-form__form {
+    align-self: stretch;
+  }
+
+  .search-form__input {
+    font-size: calc(18px + (28 - 18) * var(--md));
+    line-height: calc(22px + (34 - 22) * var(--md));
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .search-form {
+    align-items: center;
+  }
+
+  .search-form__form {
+    margin-bottom: 40px;
+  }
 }
