--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -55,49 +55,49 @@
 
 @media screen and (max-width: 1280px) {
   .techs__wrapper {
-    max-width: calc(668px + (1140 - 668) * (100vw - 768px) / (1280 - 768));
-    padding: calc(90px + (110 - 90) * (100vw - 768px) / (1280 - 768)) 0;
+    max-width: calc(668px + (1140 - 668) * var(--lg));
+    padding: calc(90px + (110 - 90) * var(--lg)) 0;
   }
 
   .techs__title {
-    margin-top: calc(80px + (90 - 80) * (100vw - 768px) / (1280 - 768));
+    margin-top: calc(80px + (90 - 80) * var(--lg));
   }
 
   .techs__subtitle {
-    font-size: calc(12px + (14 - 12) * (100vw - 768px) / (1280 - 768));
-    margin-top: calc(22px + (26 - 22) * (100vw - 768px) / (1280 - 768));
+    font-size: calc(12px + (14 - 12) * var(--lg));
+    margin-top: calc(22px + (26 - 22) * var(--lg));
   }
 
   .techs__list {
-    margin-top: calc(83px + (100 - 83) * (100vw - 768px) / (1280 - 768));
-    grid-template-columns: repeat(7, calc(84px + (90 - 84) * (100vw - 768px) / (1280 - 768)));
+    margin-top: calc(83px + (100 - 83) * var(--lg));
+    grid-template-columns: repeat(7, calc(84px + (90 - 84) * var(--lg)));
   }
 
   .techs__list-item {
-    font-size: calc(12px + (14 - 12) * (100vw - 768px) / (1280 - 768));
+    font-size: calc(12px + (14 - 12) * var(--lg));
   }
 }
 
 @media screen and (max-width: 768px) {
   .techs__wrapper {
-    max-width: calc(292px + (668 - 292) * (100vw - 320px) / (768 - 320));
-    padding: calc(70px + (90 - 70) * (100vw - 320px) / (768 - 320)) 0;
+    max-width: calc(292px + (668 - 292) * var(--md));
+    padding: calc(70px + (90 - 70) * var(--md)) 0;
   }
 
   .techs__title {
-    max-width: calc(292px + (600 - 292) * (100vw - 320px) / (768 - 320));
-    line-height: calc(36px + (58 - 36) * (100vw - 320px) / (768 - 320));
-    font-size: calc(30px + (50 - 30) * (100vw - 320px) / (768 - 320));
-    margin-top: calc(60px + (80 - 60) * (100vw - 320px) / (768 - 320));
+    max-width: calc(292px + (600 - 292) * var(--md));
+    line-height: calc(36px + (58 - 36) * var(--md));
+    font-size: calc(30px + (50 - 30) * var(--md));
+    margin-top: calc(60px + (80 - 60) * var(--md));
   }
 
   .techs__subtitle {
-    margin-top: calc(24px + (22 - 24) * (100vw - 320px) / (768 - 320));
+    margin-top: calc(24px + (22 - 24) * var(--md));
     line-height: 18px;
   }
 
   .techs__list {
-    margin-top: calc(50px + (83 - 50) * (100vw - 320px) / (768 - 320));
+    margin-top: calc(50px + (83 - 50) * var(--md));
   }
 
   .techs__list-item {
@@ -107,7 +107,7 @@
 
 @media screen and (max-width: 675px) {
   .techs__list {
-    grid-template-columns: repeat(2, calc(84px + (90 - 84) * (100vw - 768px) / (1280 - 768)));
+    grid-template-columns: repeat(2, calc(84px + (90 - 84) * var(--lg)));
   }
 }
 
