--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,12 @@
   background: inherit;
 }
 
+.header__logo {
+  display: block;
+  width: 38px;
+  height: 38px;
+}
+
 @media screen and (max-width: 1280px) {
   .header {
     padding: 18px calc(30px + (70 - 30) * var(--lg));
