--- a/src/components/SectionHeader/SectionHeader.css
+++ b/src/components/SectionHeader/SectionHeader.css
@@ -5,7 +5,9 @@
 
 .section-header__title {
   max-width: 600px;
-  margin: 0 0 23px;
+  margin: 0;
+  padding-bottom: 23px;
+  box-sizing: border-box;
   font-weight: 400;
   font-size: 22px;
   line-height: 27px;
@@ -16,12 +18,7 @@
   .section-header__title {
     max-width: calc(284px + (600 - 284) * var(--md));
     font-size: calc(18px + (22 - 18) * var(--md));
-    margin-bottom: calc(28px + (23 - 28) * var(--md));
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .section-header__title {
-    line-height: 22px;
+    padding-bottom: calc(28px + (23 - 28) * var(--md));
+    line-height: calc(22px + (27 - 22) * var(--md));
   }
 }
