--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -4,9 +4,9 @@
 
 .about-me__wrapper {
   max-width: 1140px;
-  margin: 0 auto;
-  padding: 110px 0 100px;
+  padding: 110px 0 125px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .about-me__content {
@@ -17,6 +17,8 @@
 
 .about-me__info {
   max-width: 600px;
+  display: grid;
+  grid-template-rows: repeat(3, min-content) 1fr;
 }
 
 .about-me__info-name {
@@ -38,30 +40,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-  margin: 0 0 99px;
-}
-
-.about-me__list {
-  display: flex;
-  list-style: none;
   margin: 0;
-  padding: 0;
-}
-
-.about-me__list-item {
-  margin-right: 20px;
-}
-
-.about-me__list-item:last-of-type {
-  margin-right: 0px;
-}
-
-.about-me__link {
-  text-decoration: none;
-  color: inherit;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
 }
 
 .about-me__photo {
@@ -69,6 +48,28 @@
   width: 270px;
   height: 327px;
   object-fit: cover;
+}
+
+.about-me__list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, min-content);
+  column-gap: 20px;
+  align-self: end;
+  margin: 0;
+  padding: 0;
+}
+
+.about-me__list-item {
+  display: block;
+}
+
+.about-me__link {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -85,11 +86,13 @@
   .about-me__info-name {
     font-size: calc(40px + (50 - 40) * var(--lg));
     line-height: calc(40px + (58 - 40) * var(--lg));
+    margin-bottom: calc(16px + (18 - 16) * var(--lg));
   }
 
   .about-me__info-prof {
     font-size: calc(12px + (18 - 12) * var(--lg));
     line-height: calc(18px + (20 - 18) * var(--lg));
+    margin-bottom: calc(20px + (26 - 20) * var(--lg));
   }
 
   .about-me__info-bio {
@@ -109,15 +112,6 @@
     padding: calc(70px + (90 - 70) * var(--md)) 0;
   }
 
-  .about-me__content {
-    margin-top: calc(60px + (66 - 60) * var(--md));
-    max-width: calc(292px + (668 - 292) * var(--md));
-  }
-
-  .about-me__info {
-    max-width: calc(292px + (364 - 292) * var(--md));
-  }
-
   .about-me__info-name {
     font-size: calc(30px + (40 - 30) * var(--md));
     line-height: calc(36px + (40 - 36) * var(--md));
@@ -131,24 +125,58 @@
   }
 
   .about-me__info-bio {
-    margin-bottom: calc(40px + (87 - 40) * var(--md));
-  }
-
-  .about-me__list-item {
-    margin-right: calc(26px + (20 - 26) * var(--md));
+    font-size: calc(11px + (12 - 11) * var(--md));
+    line-height: calc(16px + (18 - 16) * var(--md));
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 670px) {
   .about-me__content {
+    margin-top: calc(60px + (66 - 60) * var(--md));
     flex-direction: column-reverse;
     align-items: center;
-    max-width: 292px;
+  }
+
+  .about-me__info {
+    max-width: 100%;
+  }
+
+  .about-me__info-name {
+    margin-top: 40px;
+  }
+
+  .about-me__info-bio {
+    margin-bottom: 40px;
+  }
+
+  .about-me__info-name,
+  .about-me__info-prof,
+  .about-me__info-bio {
+    text-align: center;
   }
 
   .about-me__photo {
-    width: 100%;
+    width: 292px;
     height: 352px;
-    margin-bottom: 40px;
+  }
+
+  .about-me__list {
+    justify-self: center;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .about-me__content {
+    align-items: flex-start;
+  }
+
+  .about-me__info-name,
+  .about-me__info-prof,
+  .about-me__info-bio {
+    text-align: left;
+  }
+
+  .about-me__list {
+    justify-self: start;
   }
 }
