--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,45 +1,41 @@
 .nav-tab {
-  background-color: #f5f5f5;
+  background: #f5f5f5;
 }
 
-.nav-tab__wrapper {
+.nav-tab__nav {
   max-width: 1280px;
-  margin: 0 auto;
   padding: 24px 0;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .nav-tab__list {
-  display: flex;
-  justify-content: center;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  column-gap: 40px;
   margin: 0;
   padding: 0;
-  list-style: none;
 }
 
 .nav-tab__list-item {
-  display: block;
-  margin-right: 40px;
-}
-
-.nav-tab__list-item:last-of-type {
-  margin-right: 0;
+  display: flex;
 }
 
 .nav-tab__link {
-  display: block;
-  border-bottom: 1px solid black;
-  box-sizing: border-box;
-  font-size: 13px;
   font-weight: 500;
+  font-size: 13px;
   line-height: 16px;
-  text-decoration: none;
   color: #000;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-underline-offset: 2px;
 }
 
 @media screen and (max-width: 768px) {
-  .nav-tab__list-item {
-    margin-right: calc(24px + (40 - 24) * var(--md));
+  .nav-tab__list {
+    column-gap: calc(24px + (40 - 24) * var(--md));
   }
 
   .nav-tab__link {
