--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,40 +1,41 @@
 .promo {
-  background-color: #dddee3;
+  background: #dddee3;
 }
 
 .promo__wrapper {
   max-width: 1280px;
-  margin: 0 auto;
-  padding-top: 184px;
-  padding-bottom: 224px;
+  padding: 184px 0 224px;
   box-sizing: border-box;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
   background-image: url('../../images/promo-bg-image.svg');
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
   background-size: 320px;
 }
 
 .promo__title {
-  margin: 0 auto;
   max-width: 730px;
   min-height: 116px;
   font-weight: 400;
   font-size: 50px;
   line-height: 58px;
-  letter-spacing: -0.04em;
   text-align: center;
+  letter-spacing: -0.04em;
+  margin: 0;
 }
 
 @media screen and (max-width: 768px) {
-  .promo__title {
-    max-width: calc(300px + (730 - 300) * var(--md));
-    font-size: calc(31px + (50 - 31) * var(--md));
-    line-height: calc(39px + (58 - 39) * var(--md));
-  }
-
   .promo__wrapper {
     padding-top: calc(207px + (224 - 207) * var(--md));
     padding-bottom: calc(240px + (240 - 246) * var(--md));
     background-size: calc(248px + (320 - 248) * var(--md));
+  }
+
+  .promo__title {
+    max-width: calc(300px + (730 - 300) * var(--md));
+    font-size: calc(31px + (50 - 31) * var(--md));
+    line-height: calc(39px + (58 - 39) * var(--md));
   }
 }
