--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -3,60 +3,68 @@
 }
 
 .techs__wrapper {
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 100px 0;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1140px;
+  padding: 100px 0;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .techs__title {
   max-width: 600px;
-  margin: 90px 0 0;
   font-weight: 400;
   font-size: 50px;
   line-height: 58px;
-  text-align: center;
   letter-spacing: -0.04em;
+  margin: 90px 0 0;
 }
 
 .techs__subtitle {
   max-width: 460px;
-  margin: 26px 0 0;
+  font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  text-align: center;
   letter-spacing: -0.04em;
+  text-align: center;
+  margin: 26px 0 0;
 }
 
 .techs__list {
-  display: grid;
-  grid-template-columns: repeat(7, 90px);
-  gap: 10px;
   list-style: none;
   padding: 0;
   margin: 100px 0 0;
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(84px, 1fr));
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
 .techs__list-item {
+  min-height: 60px;
   display: flex;
   justify-content: center;
+  align-items: center;
   background: #e8e8e8;
+  border-radius: 10px;
+  font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  text-align: center;
   letter-spacing: -0.04em;
-  padding: 21px 0 22px;
-  border-radius: 10px;
-  box-sizing: border-box;
+  transition: box-shadow 0.3s linear;
+}
+
+.techs__list-item:hover {
+  cursor: default;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 @media screen and (max-width: 1280px) {
   .techs__wrapper {
     max-width: calc(668px + (1140 - 668) * var(--lg));
-    padding: calc(90px + (110 - 90) * var(--lg)) 0;
+    padding: calc(90px + (100 - 90) * var(--lg)) 0;
   }
 
   .techs__title {
@@ -65,22 +73,23 @@
 
   .techs__subtitle {
     font-size: calc(12px + (14 - 12) * var(--lg));
+    line-height: calc(18px + (20 - 18) * var(--lg));
     margin-top: calc(22px + (26 - 22) * var(--lg));
   }
 
   .techs__list {
+    max-width: calc(648px + (1140 - 648) * var(--lg));
     margin-top: calc(83px + (100 - 83) * var(--lg));
-    grid-template-columns: repeat(7, calc(84px + (90 - 84) * var(--lg)));
   }
 
   .techs__list-item {
-    font-size: calc(12px + (14 - 12) * var(--lg));
+    min-height: calc(57px + (60 - 57) * var(--lg));
   }
 }
 
 @media screen and (max-width: 768px) {
   .techs__wrapper {
-    max-width: calc(292px + (668 - 292) * var(--md));
+    max-width: calc(284px + (668 - 284) * var(--md));
     padding: calc(70px + (90 - 70) * var(--md)) 0;
   }
 
@@ -93,27 +102,12 @@
 
   .techs__subtitle {
     margin-top: calc(24px + (22 - 24) * var(--md));
-    line-height: 18px;
+    font-size: calc(11px + (12 - 11) * var(--md));
+    line-height: calc(16px + (18 - 16) * var(--md));
   }
 
   .techs__list {
+    max-width: calc(178px + (648 - 178) * var(--md));
     margin-top: calc(50px + (83 - 50) * var(--md));
-  }
-
-  .techs__list-item {
-    line-height: 15px;
-  }
-}
-
-@media screen and (max-width: 675px) {
-  .techs__list {
-    grid-template-columns: repeat(2, calc(84px + (90 - 84) * var(--lg)));
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .techs__subtitle {
-    font-size: 11px;
-    line-height: 16px;
   }
 }
