--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,4 +1,6 @@
 .profile {
+  --md: calc((100vw - 320px) / (768 - 320));
+  --lg: calc((100vw - 768px) / (1280 - 768));
   max-width: 410px;
   display: flex;
   flex-direction: column;
