--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,25 +1,35 @@
 .search-form {
+  --md: calc((100vw - 320px) / (768 - 320));
+  --lg: calc((100vw - 768px) / (1280 - 768));
+}
+
+.search-form__wrapper {
   max-width: 1140px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  display: grid;
+  row-gap: 32px;
   padding: 70px 0 47px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .search-form__form {
-  margin: 0 0 32px;
-  padding: 0;
-  border: none;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 34px;
+  column-gap: 46px;
   padding-bottom: 13px;
   box-sizing: border-box;
+  transition: border-color 0.3s linear;
   border-bottom: 1px solid #e8e8e8;
+}
+
+.search-form__form:focus-within {
+  border-color: #3456f3;
 }
 
 .search-form__input {
   border: none;
+  background: inherit;
   font-weight: 500;
   font-size: 28px;
   line-height: 34px;
@@ -35,6 +45,7 @@
 }
 
 .search-form__submit {
+  padding: 0;
   border: none;
   border-radius: 48px;
   width: 34px;
@@ -46,7 +57,7 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .search-form {
+  .search-form__wrapper {
     max-width: calc(708px + (1140 - 708) * var(--lg));
     padding-top: calc(80px + (70 - 80) * var(--lg));
     padding-bottom: calc(60px + (47 - 60) * var(--lg));
@@ -54,16 +65,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  .search-form {
+  .search-form__wrapper {
     max-width: calc(292px + (708 - 292) * var(--md));
     padding-top: calc(84px + (80 - 84) * var(--md));
     padding-bottom: calc(50px + (60 - 50) * var(--md));
-    align-items: flex-end;
-    margin-bottom: 29px;
-  }
-
-  .search-form__form {
-    align-self: stretch;
+    justify-items: end;
   }
 
   .search-form__input {
@@ -72,12 +78,9 @@
   }
 }
 
-@media screen and (max-width: 320px) {
-  .search-form {
-    align-items: center;
-  }
-
-  .search-form__form {
-    margin-bottom: 40px;
+@media screen and (max-width: 425px) {
+  .search-form__wrapper {
+    justify-items: center;
+    row-gap: 40px;
   }
 }
