удалить общие стили

--- a/src/components/AuthNavigation/AuthNavigation.css
+++ b/src/components/AuthNavigation/AuthNavigation.css
@@ -26,6 +26,12 @@
   font-size: 12px;
   line-height: 16px;
   text-decoration: none;
+  transition: opacity 0.3s linear;
+}
+
+.auth-navigation__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .auth-navigation__link_type_signup {
