--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -72,6 +72,12 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
+  transition: opacity 0.3s linear;
+}
+
+.about-me__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 1280px) {
