--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -112,6 +112,12 @@
   line-height: 17px;
   color: #3456f3;
   text-decoration: none;
+  transition: opacity 0.3s linear;
+}
+
+.auth-form__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
