--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -60,6 +60,12 @@
   font-size: 13px;
   line-height: 16px;
   color: #000;
+  transition: opacity 0.3s linear;
+}
+
+.footer__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 1280px) {
