--- a/src/components/LinkWithIcon/LinkWithIcon.css
+++ b/src/components/LinkWithIcon/LinkWithIcon.css
@@ -14,6 +14,12 @@
   height: 32px;
   padding: 3px 3px 3px 11px;
   box-sizing: border-box;
+  transition: opacity 0.3s linear;
+}
+
+.link-with-icon:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .link-with-icon__icon {
