--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -37,6 +37,12 @@
   line-height: 15px;
   background: #f4f4f4;
   border-radius: 6px;
+  transition: opacity 0.3s linear;
+}
+
+.movies-cards__button-more:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 1280px) {
