--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -32,6 +32,12 @@
   color: #000;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   text-underline-offset: 2px;
+  transition: opacity 0.3s linear;
+}
+
+.nav-tab__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
