--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -32,6 +32,12 @@
   line-height: 18px;
   text-decoration: none;
   color: #000;
+  transition: opacity 0.3s linear;
+}
+
+.navigation__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .navigation__link_active {
