--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -41,6 +41,12 @@
   font-size: 14px;
   line-height: 17px;
   text-decoration: none;
+  transition: opacity 0.3s linear;
+}
+
+.not-found__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
