--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -44,6 +44,12 @@
   justify-content: space-between;
   text-decoration: none;
   color: #000;
+  transition: opacity 0.3s linear;
+}
+
+.portfolio__link:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .portfolio__link-text {
