--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -74,6 +74,12 @@
   background: inherit;
   border: 0;
   margin-bottom: 16px;
+  transition: opacity 0.3s linear;
+}
+
+.profile__form-handler:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .profile__form-handler:last-of-type {
