--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,5 +8,6 @@
   width: 100%;
   font-family: 'Inter', Arial, sans-serif;
   color: #000;
-  background-color: #fff;
+  background-color: #fafafa;
+  min-height: 100vh;
 }
