--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,24 @@
 .header {
   --md: calc((100vw - 320px) / (768 - 320));
   --lg: calc((100vw - 768px) / (1280 - 768));
+}
+
+.header_background-color_gray {
+  background: #dddee3;
+}
+
+.header_background-color_light {
+  background: #fafafa;
+}
+
+.header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 18px 70px;
+  padding: 18px 0;
   box-sizing: border-box;
-  background: inherit;
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 .header__link {
@@ -25,13 +37,13 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .header {
-    padding: 18px calc(30px + (70 - 30) * var(--lg));
+  .header__wrapper {
+    max-width: calc(668px + (1140 - 668) * var(--lg));
   }
 }
 
 @media screen and (max-width: 768px) {
-  .header {
-    padding: 18px calc(14px + (30 - 14) * var(--md));
+  .header__wrapper {
+    max-width: calc(284px + (668 - 284) * var(--md));
   }
 }
