--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,7 +1,4 @@
 .movies-card {
-  --md: calc((100vw - 320px) / (768 - 320));
-  --lg: calc((100vw - 768px) / (1280 - 768));
-  display: block;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
   border-radius: 6px;
   background: #fff;
@@ -16,7 +13,6 @@
 }
 
 .movies-card__title {
-  display: block;
   max-width: 240px;
   font-weight: 500;
   font-size: 15px;
@@ -27,16 +23,20 @@
 }
 
 .movies-card__time {
+  max-width: 70px;
   font-weight: 400;
   font-size: 13px;
   line-height: 18px;
   text-align: right;
   color: #a0a0a0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .movies-card__img {
-  display: block;
   width: 100%;
+  height: 200px;
 }
 
 .movies-card__footer {
@@ -82,20 +82,13 @@
   background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 1280px) {
-  .movies-card__title {
-    max-width: calc(224px + (240 - 224) * var(--lg));
-  }
-}
-
 @media screen and (max-width: 768px) {
   .movies-card__title {
-    max-width: calc(200px + (224 - 200) * var(--md));
-    font-size: calc(12px + (15 - 12) * var(--md));
+    max-width: 224px;
   }
 
-  .movies-card__time {
-    font-size: calc(10px + (13 - 10) * var(--md));
+  .movies-card__img {
+    height: 190px;
   }
 }
 
@@ -107,10 +100,18 @@
 
   .movies-card__title {
     font-weight: 700;
+    font-size: 12px;
+    max-width: 200px;
   }
 
   .movies-card__time {
     font-weight: 700;
+    font-size: 10px;
+    max-width: 50px;
+  }
+
+  .movies-card__img {
+    height: 169px;
   }
 
   .movies-card__footer {
