--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,13 +40,19 @@
 }
 
 .preloader {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-  z-index: 10;
-  padding: 20px;
+  z-index: 300;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.preloader_show {
+  display: flex;
 }
 
 .preloader__container {
