--- a/src/components/SubmitButton/SubmitButton.css
+++ b/src/components/SubmitButton/SubmitButton.css
@@ -10,6 +10,7 @@
   color: #fff;
   padding: 0;
   transition: opacity 0.3s linear;
+  transition: background-color 0.3s linear;
 }
 
 .submit-button:disabled {
