--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
   background: #f8f8f8;
+  margin-top: auto;
   --md: calc((100vw - 320px) / (768 - 320));
   --lg: calc((100vw - 768px) / (1280 - 768));
 }
