--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -34,6 +34,14 @@
   overflow: hidden;
 }
 
+.movies-card__img-link {
+  transition: opacity 0.3s linear;
+}
+
+.movies-card__img-link:hover {
+  opacity: 0.7;
+}
+
 .movies-card__img {
   width: 100%;
   height: 200px;
