--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,7 @@
 .profile {
   --md: calc((100vw - 320px) / (768 - 320));
   --lg: calc((100vw - 768px) / (1280 - 768));
-  max-width: 410px;
+  width: 410px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -68,6 +68,8 @@
 }
 
 .profile__form-handler {
+  max-width: max-content;
+  align-self: center;
   font-size: 13px;
   line-height: 16px;
   padding: 0;
